--- a/webapp/mockup-options/accordion.html
+++ b/webapp/mockup-options/accordion.html
@@ -33,7 +33,7 @@
 
     <!-- Menu -->
     <div class="ui menu"> 
-        <a href="index.html" class="header item">Home</a> 
+        <a href="../index.html" class="header item">Home</a> 
     </div>
 
     <!-- Calendar -->
@@ -57,96 +57,96 @@
         <div class="active content">
             <div class="ui equal width aligned grid">
                 <div class="eight wide column"> 
-            <div class="ui fluid card withCount">
-                <div class="content"> 
-                    <div class="ui inverted segment left floated" id="directions"> 
-                        <div class="ui tiny inverted statistics left floated"> 
-                            <div class="statistic">
-                                <div class="value"> 0 
-                                </div> 
-                                <div class="label"> Count </div>
+                    <div class="ui fluid card withCount">
+                        <div class="content"> 
+                            <div class="ui inverted segment left floated" id="directions"> 
+                                <div class="ui tiny inverted statistics left floated"> 
+                                    <div class="statistic">
+                                        <div class="value"> 0 
+                                        </div> 
+                                        <div class="label"> Count </div>
+                                    </div>
+                                </div>
                             </div>
+                            <img class="ui tiny image left floated" src="../../img/directions.png"> 
+                            <div class="header"> Directions </div> 
+                            <div class="meta"> Location or directions provided. E.G. rooms, events, contact info, etc. </div> 
                         </div>
                     </div>
-                    <img class="ui tiny image left floated" src="../../img/directions.png"> 
-                    <div class="header"> Directions </div> 
-                    <div class="meta"> Location or directions provided. E.G. rooms, events, contact info, etc. </div> 
                 </div>
-            </div>
-        </div>
-        <div class="eight wide column"> 
-            <div class="ui fluid card withCount">
-                <div class="content">
-                    <div class="ui inverted segment left floated" id="lookup">
-                        <div class="ui tiny inverted statistics left floated"> 
-                            <div class="statistic">
-                                <div class="value"> 0
-                                </div> 
-                                <div class="label"> Count </div>
+                <div class="eight wide column"> 
+                    <div class="ui fluid card withCount">
+                        <div class="content">
+                            <div class="ui inverted segment left floated" id="lookup">
+                                <div class="ui tiny inverted statistics left floated"> 
+                                    <div class="statistic">
+                                        <div class="value"> 0
+                                        </div> 
+                                        <div class="label"> Count </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                            <img class="ui tiny image left floated" src="../../img/lookup.png"> 
+                            <div class="header"> Lookup </div>
+                            <div class="meta"> Find call numbers, books, articles, locations, etc. for known items requested by patron. </div>
+                        </div> 
                     </div>
-                    <img class="ui tiny image left floated" src="../../img/lookup.png"> 
-                    <div class="header"> Lookup </div>
-                    <div class="meta"> Find call numbers, books, articles, locations, etc. for known items requested by patron. </div>
-                </div> 
-            </div>
 
-        </div>
-        <div class="eight wide column"> 
-            <div class="ui fluid card withCount">
-                <div class="content">
-                    <div class="ui inverted segment left floated" id="policy">
-                        <div class="ui tiny inverted statistics left floated"> 
-                            <div class="statistic">
-                                <div class="value"> 0
-                                </div> 
-                                <div class="label"> Count </div>
+                </div>
+                <div class="eight wide column"> 
+                    <div class="ui fluid card withCount">
+                        <div class="content">
+                            <div class="ui inverted segment left floated" id="policy">
+                                <div class="ui tiny inverted statistics left floated"> 
+                                    <div class="statistic">
+                                        <div class="value"> 0
+                                        </div> 
+                                        <div class="label"> Count </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                            <img class="ui tiny image left floated" src="../../img/policy.png"> 
+                            <div class="header"> Policy </div>
+                            <div class="meta"> Hours, access privileges, borrowing, reservations, other policies. </div>
+                        </div> 
                     </div>
-                    <img class="ui tiny image left floated" src="../../img/policy.png"> 
-                    <div class="header"> Policy </div>
-                    <div class="meta"> Hours, access privileges, borrowing, reservations, other policies. </div>
-                </div> 
-            </div>
-        </div>
-        <div class="eight wide column"> 
-            <div class="ui fluid card withCount">
-                <div class="content">
-                    <div class="ui inverted segment left floated" id="research">
-                        <div class="ui tiny inverted statistics left floated"> 
-                            <div class="statistic">
-                                <div class="value"> 0
-                                </div> 
-                                <div class="label"> Count </div>
+                </div>
+                <div class="eight wide column"> 
+                    <div class="ui fluid card withCount">
+                        <div class="content">
+                            <div class="ui inverted segment left floated" id="research">
+                                <div class="ui tiny inverted statistics left floated"> 
+                                    <div class="statistic">
+                                        <div class="value"> 0
+                                        </div> 
+                                        <div class="label"> Count </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                            <img class="ui tiny image left floated" src="../../img/research.png">
+                            <div class="header"> Research Assistance </div>
+                            <div class="meta"> Help patron with research strategies, advice, overview of resources (drop-in). </div>
+                        </div> 
                     </div>
-                    <img class="ui tiny image left floated" src="../../img/research.png">
-                    <div class="header"> Research Assistance </div>
-                    <div class="meta"> Help patron with research strategies, advice, overview of resources (drop-in). </div>
-                </div> 
-            </div>
-        </div>
-        <div class="eight wide column"> 
-            <div class="ui fluid card withCount">
-                <div class="content">
-                    <div class="ui inverted segment left floated" id="technical">
-                        <div class="ui tiny inverted statistics left floated"> 
-                            <div class="statistic">
-                                <div class="value"> 0
-                                </div> 
-                                <div class="label"> Count </div>
+                </div>
+                <div class="eight wide column"> 
+                    <div class="ui fluid card withCount">
+                        <div class="content">
+                            <div class="ui inverted segment left floated" id="technical">
+                                <div class="ui tiny inverted statistics left floated"> 
+                                    <div class="statistic">
+                                        <div class="value"> 0
+                                        </div> 
+                                        <div class="label"> Count </div>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                            <img class="ui tiny image left floated" src="../../img/technical.png"> 
+                            <div class="header"> Technical Assistance </div>
+                            <div class="meta"> Help with printers, computers, software, scanners, etc. </div>
+                        </div> 
                     </div>
-                    <img class="ui tiny image left floated" src="../../img/technical.png"> 
-                    <div class="header"> Technical Assistance </div>
-                    <div class="meta"> Help with printers, computers, software, scanners, etc. </div>
-                </div> 
-            </div>
-        </div>
+                </div>
             </div>
         </div>
 
@@ -262,7 +262,7 @@
                             </form>
                         </div>
                         <div class="eight wide column">
-                         <form class="ui form">
+                           <form class="ui form">
                             <div class="grouped fields">
                                 <label for="status">Patron Status</label>
                                 <div class="field">
