--- a/webapp/mockup-options/tap.html
+++ b/webapp/mockup-options/tap.html
@@ -30,7 +30,7 @@
 <body>
     <!-- Menu -->
     <div class="ui menu"> 
-        <a href="index.html" class="header item">Home</a> 
+        <a href="../index.html" class="header item">Home</a> 
     </div>
 
     <!-- Calendar -->
@@ -455,6 +455,7 @@
                 </div>
             </div>
         </div>
+        
     </div>
 </body>
 </html>
