--- a/webapp/references.html
+++ b/webapp/references.html
@@ -27,9 +27,9 @@
     </div>
 
     <div class="ui equal width center aligned grid">
-        <a href = "mockup.html" class="eight wide column" id="black">Circulation</a>
-        <a href = "mockup.html"class="eight wide blue column">Reference</a>
-        <a href = "mockup.html"class="eight wide olive column">Off</a>
+        <a href = "mockup-options/tap.html" class="eight wide column" id="black">Tap</a>
+        <a href = "mockup-options/accordion.html"class="eight wide blue column">Accordion</a>
+        <a href = "mockup.html"class="eight wide olive column">Original</a>
         <a href = "mockup.html"class="eight wide column" id="black">Service1</a>
         <a href = "mockup.html"class="eight wide column" id="black">Service2</a>
         <a href = "mockup.html" class="eight wide pink column">Service3</a>
